argocd/iocaine/manifests/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iocaine
  labels:
    app: iocaine
spec:
  serviceName: "iocaine"
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: iocaine
  template:
    metadata:
      labels:
        app: iocaine
    spec:
      containers:
        - name: iocaine
          image: harbor.yanello.net/madhouse/iocaine/iocaine:3.5.1@sha256:cfb56064334d3ba36a34f54b68440318c44651f6efea26aca0b832d05e497de7
          command: ["iocaine"]
          args: ["--config-path", "/etc/iocaine/config.d", "start"]
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8181
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              memory: 50Mi
              cpu: 100m
            limits:
              memory: 200Mi
          volumeMounts:
            - name: config
              mountPath: /etc/iocaine/config.d/config.kdl
              subPath: config.kdl
            - name: metrics
              mountPath: /etc/iocaine/config.d/metrics.kdl
              subPath: metrics.kdl
            - name: iocaine-persistent
              mountPath: /opt/iocaine/share/data/
      volumes:
        - name: config
          configMap:
            name: config
        - name: metrics
          configMap:
            name: metrics
  volumeClaimTemplates:
    - metadata:
        name: iocaine-persistent
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "truenas-hdd-nfs"
        resources:
          requests:
            storage: 1Gi
