argocd/iocaine/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: iocaine
  name: iocaine
spec:
  parentRefs:
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https-root
    # - name: cilium-public-gateway
    #   namespace: cilium
    #   sectionName: http-root
    # - name: cilium-private-gateway
    #   namespace: cilium
    #   sectionName: http-root
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https-root
  hostnames:
    # - iocaine.yanello.net
    - yanello.net
  rules:
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: /metrics
    #   backendRefs:
    #     - name: metrics
    #       port: 8181
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: iocaine
          port: 8080
